<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Piramide">

    <RelativeLayout
        android:id="@+id/toolbarPiramide"
        android:layout_width="wrap_content"
        android:layout_height="55dp">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/ic_regresar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Txt_piramide"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#ccc" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutPiramide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarPiramide"
        android:padding="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_dibujar_piramide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/Txt_dibujar_piramide"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/Txt_piramide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="#000000"
                android:textSize="18sp"
                android:gravity="center_horizontal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/layoutPiramide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_reiniciar"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:text="@string/Txt_reiniciar"/>

    </RelativeLayout>


</RelativeLayout>